# SimpleOOPProject

./: CMakeLists.txt  README.md  main.cpp
source_code/: CMakeLists.txt
source_code/include/: date.hpp  human.hpp  publication.hpp  research.hpp  student.hpp
source_code/src/: date.cpp  human.cpp  publication.cpp  research.cpp  student.cpp
